--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -2,13 +2,10 @@
 <html lang="fr">
 
 <head>
-<script src="../table/jquery-1.9.1.js"></script>
+    <script src="../table/jquery-1.9.1.js"></script>
     <script src="../table/jquery-ui.js"></script>
     <script src="../app.js" defer></script>
-    <script src="../table/jquery.dataTables.min.js"></script>
-    <script src="../table/dataTables.responsive.js"></script>
-    <link href="../table/dataTables.responsive.css" rel="stylesheet" />
-    <link href="../table/jquery.dataTables.css" rel="stylesheet" />
+    <link href="../css/table.css" rel="stylesheet" />
     <link href="../table/jquery-ui.js" rel="stylesheet" />
     <link href="../css/footer.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -44,15 +41,18 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2MGP41PJSW"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
     gtag('js', new Date());
 
     gtag('config', 'G-2MGP41PJSW');
 </script>
 
 <body>
-      <script type="text/javascript" charset="utf-8">
-        $(document).ready(function () {
+    <script type="text/javascript" charset="utf-8">
+        $(document).ready(function() {
             $('#example').DataTable({
                 responsive: true,
                 pagingType: "simple",
@@ -60,7 +60,7 @@
             })
         });
     </script>
-    
+
     <header id="nav-menu" style="padding: 0.5rem; margin: 0 auto;" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="https://bdsiutsn.fr">
@@ -70,9 +70,8 @@
                 <nav class="menu">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="https://bdsiutsn.fr">Accueil</a></li>
-                         <li>
-                            <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
-                                aria-expanded="false" aria-label="discover">
+                        <li>
+                            <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true" aria-expanded="false" aria-label="discover">
                                 Evènements
                             </button>
                             <div id="dropdown1" class="dropdown">
@@ -90,8 +89,7 @@
                             </div>
                         </li>
                         <li>
-                            <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
-                                aria-expanded="false" aria-label="discover">
+                            <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true" aria-expanded="false" aria-label="discover">
                                 Classements
                                 <i class="bx bx-chevron-down" aria-hidden="true"></i>
                             </button>
@@ -143,56 +141,33 @@
             </thead>
 
             <tbody>
-                <tr class="mlt">
-                    <td>MLT</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>1</td>
-                </tr>
-                <tr class="tc">
-                    <td>TC</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>1</td>
-                </tr>
-                <tr class="gcgp">
-                    <td>GCGP</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>1</td>
-                </tr>
-                <tr class="mp">
-                    <td>MP</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                </tr>
-                <tr class="gim">
-                    <td>GIM</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                </tr>
-                <tr class="gccd">
-                    <td>GCCD</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                </tr>
-                <tr class="polytech">
-                    <td>POLYTECH</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                </tr>
-                <tr class="cesi">
-                    <td>CESI</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                </tr>
             </tbody>
         </table>
+
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                fetch('../datas/promotions.json')
+                    .then(response => response.json())
+                    .then(data => {
+                        populateTable(data);
+                    });
+            });
+
+            function populateTable(data) {
+                const tbody = document.querySelector('#example tbody');
+
+                data.forEach(team => {
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                        <td>${team.name}</td>
+                        <td>${team.points}</td>
+                        <td>${team.rank || '-'}</td>
+                        <td>${team.teams || '-'}</td>
+                    `;
+                    tbody.appendChild(row);
+                });
+            }
+        </script>
 
         <br><br>
         <!--<h1><a href="https://bdsiutsn.fr" style="color: #292c2f;">Retour à l'Accueil</a></h1>-->
