Ajout du responsive

--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -132,21 +132,23 @@
             </div>
         </div>
 
-        <table id="example" class="display" cellspacing="0" width="100%">
-            <thead>
-                <tr>
-                    <th>Nom d'équipe</th>
-                    <th>Promotion</th>
-                    <th>Membres</th>
-                    <th>Rang</th>
-                    <th>Points</th>
-                    <th>Participations</th>
-                    <th>Capitaine</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
+        <div id="example-container">
+            <table id="example" class="display" cellspacing="0" width="100%">
+                <thead>
+                    <tr>
+                        <th>Nom d'équipe</th>
+                        <th>Promotion</th>
+                        <th>Membres</th>
+                        <th>Rang</th>
+                        <th>Points</th>
+                        <th>Participations</th>
+                        <th>Capitaine</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
 
         <script>
             document.addEventListener('DOMContentLoaded', function() {
