Amélioration CSS Table

--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -125,12 +125,14 @@
         <h1>Classement des équipes inscrites :</h1>
         <br><br>
 
-        <div class="controls">
-            <div class="search-bar">
-                Recherche:
-                <input type="text">
+        <center>
+            <div class="controls">
+                <div class="search-bar">
+                    Recherche:
+                    <input type="text">
+                </div>
             </div>
-        </div>
+        </center>
 
         <div id="example-container">
             <table id="example" class="display" cellspacing="0" width="100%">
