--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <nav class="menu">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="#">Accueil</a></li>
+                        <li><a class="nav-link" href="/presentation">Présentation</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -110,7 +111,6 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -132,45 +132,6 @@
         <h1>Bienvenue sur le site du Bureau des Sports de l'IUT de Saint-Nazaire !</h1>
 
         <br></br>
-
-        <div class="presentation">
-            <h2>Présentation</h2>
-            <h3>Le Bureau des Sports favorise la pratique de nombreux sports sur le campus, grâce à l’entraide des BDS
-                de
-                Saint-Nazaire, en organisant
-                divers événements sportifs comme l'événement la journée d'intégration du début d'année. L'association
-                favorise la cohésion d'équipe et l'esprit de groupe, des valeurs qui s’appliquent aussi bien dans le
-                cadre des la compétitions que dans sa vie professionnelle. Nous avons pour but d’organiser divers
-                événements sportifs et festifs pour les
-                1500 étudiants de l’IUT de Saint-Nazaire ainsi que de dynamiser la vie étudiante de chacun des étudiants
-                de l'IUT.
-            </h3>
-        </div>
-
-        <br></br>
-
-        <div class="missions">
-            <h2>Missions</h2>
-            <li style="text-indent: 25px;">
-                Informer les étudiants des possibilités offertes par l’IUT de Saint-Nazaire pour la pratique de plus
-                de
-                20 activités physiques et sportives proposées par la <a class="missions-suaps"
-                    href="https://iut-sn.univ-nantes.fr/vie-etudiante/activites-sportives-a-liut"
-                    target=”_blank”>SUAPS</a>,
-            </li>
-            <li style="text-indent: 25px;">
-                Dynamiser la vie sportive des étudiants des différents campus de Saint-Nazaire via
-                l'organisation
-                d'évènements
-                sportifs tout au long de l'année.
-            </li>
-            <li style="text-indent: 25px;">
-                Le site va permettre au BDS d’impliquer plus facilement les étudiants à participer aux évènements
-                sportifs en renforçant le côté compétitif de celui-ci. La rubrique <a class="missions-suaps"
-                    href="/classements/equipes" target=”_blank”>Classement</a> sera utiliser pour suivre l’avancer de
-                chaque équipe.
-            </li>
-        </div>
 
         <section class="main-content">
             <div class="container-xl">
