--- a/presentation.html
+++ b/presentation.html
@@ -11,29 +11,37 @@
     <link href="./table/jquery.dataTables.css" rel="stylesheet" />
     <link href="./table/jquery-ui.js" />
     <link href="./css/footer.css" rel="stylesheet" />
+    <link href="./css/css.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel=" stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" href="/css/styles1.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="shortcut icon" href="./img/bds-logo-shark.png">
 
     <meta name="fragment" content="!">
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>BDS - Contact</title>
-    <meta name="description" content="">
-
-    <meta name="author" content="Bureau des Sports IUT Saint-Nazaire">
+    <title>Bureau des Sports IUT Saint-Nazaire</title>
+    <meta name="description"
+        content="Le Bureau des Sports de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
+    <meta name="keywords"
+        content="BDS, IUT, SN, IUT Saint-Nazaire, Saint-Nazaire, Bureau des Sports, MLT, TC, GLT, IUT SN, BDS IUT SN, BDS IUT, BDS SN, bdsiutsn, GC, GIM, MP, GCGP, bds.iut.sn, BDS IUT Saint-Nazaire, bds, iut, sn, bds iut sn, bds iut, bds sn, iut sn, bdsiutsn">
+    <meta name="author" content="Stéfan CORLAY">
     <meta name="country" content="France">
     <meta name="geo.country" content="FR">
 
     <meta property="og:type" content="website">
     <meta property="og:locale" content="fr_FR">
     <meta property="og:site_name" content="Bureau des Sports IUT Saint-Nazaire">
-    <meta name="og:image" content="">
+    <meta name="og:image" content="./img/bds-logo-shark.png">
     <meta name="og:image:width" content="">
     <meta name="og:image:height" content="">
 
@@ -47,9 +55,11 @@
 
     gtag('config', 'G-2MGP41PJSW');
 </script>
+<!--<div class="spacer" data-height="1000"></div>-->
 
 <body>
-    <header style="padding: 0.5rem; margin: 0 auto;" id="nav-menu" aria-label="navigation bar">
+
+    <header id="nav-menu" style="padding: 0.5rem; margin: 0 auto;" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/">
                 <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
@@ -57,7 +67,8 @@
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
-                        <li><a class="nav-link" href=/">Accueil</a></li>
+                        <li><a class="nav-link" href="/">Accueil</a></li>
+                        <li><a class="nav-link" href="#">Présentation</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -86,19 +97,20 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/equipes" style="color: #292c2f;">Classement
+                                        <a class="dropdown-link" href="/classements/equipes"
+                                            style="color: #292c2f;">Classement
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/promotion" style="color: #292c2f;">Classement
+                                        <a class="dropdown-link" href="/classements/promotion"
+                                            style="color: #292c2f;">Classement
                                             des
                                             promotions</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -116,15 +128,46 @@
     </header>
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
-        <div class="containers">
-            <div class="title"></div>
-            <h3 class="zdpjvzelk">Merci pour votre demande !</h3>
-            <br></br>
-            <h2 class="zdpjvzelk">Nous vous répondrons par mail incéssamment sous peu !</h2>
-            <br></br>
-            <p><a href="/" style="color: #292c2f; ">Retour à l'Accueil</a></p>
+
+        <div class="presentation">
+            <h2>Présentation</h2>
+            <h3>Le Bureau des Sports favorise la pratique de nombreux sports sur le campus, grâce à l’entraide des BDS
+                de
+                Saint-Nazaire, en organisant
+                divers événements sportifs comme l'événement la journée d'intégration du début d'année. L'association
+                favorise la cohésion d'équipe et l'esprit de groupe, des valeurs qui s’appliquent aussi bien dans le
+                cadre des la compétitions que dans sa vie professionnelle. Nous avons pour but d’organiser divers
+                événements sportifs et festifs pour les
+                1500 étudiants de l’IUT de Saint-Nazaire ainsi que de dynamiser la vie étudiante de chacun des étudiants
+                de l'IUT.
+            </h3>
         </div>
+
+        <br></br>
+
+        <div class="missions">
+            <h2>Missions</h2>
+            <li style="text-indent: 25px;">
+                Informer les étudiants des possibilités offertes par l’IUT de Saint-Nazaire pour la pratique de plus
+                de
+                20 activités physiques et sportives proposées par la <a class="missions-suaps"
+                    href="https://iut-sn.univ-nantes.fr/vie-etudiante/activites-sportives-a-liut"
+                    target=”_blank”>SUAPS</a>,
+            </li>
+            <li style="text-indent: 25px;">
+                Dynamiser la vie sportive des étudiants des différents campus de Saint-Nazaire via
+                l'organisation
+                d'évènements
+                sportifs tout au long de l'année.
+            </li>
+            <li style="text-indent: 25px;">
+                Le site va permettre au BDS d’impliquer plus facilement les étudiants à participer aux évènements
+                sportifs en renforçant le côté compétitif de celui-ci. La rubrique <a class="missions-suaps"
+                    href="/classements/equipes" target=”_blank”>Classement</a> sera utiliser pour suivre l’avancer de
+                chaque équipe.
+            </li>
         </div>
+
     </main>
 
     <footer class="footer-distributed" style="padding: 2rem; margin: 0 auto; max-width: 1300px;">
@@ -136,10 +179,19 @@
         </div>
 
         <div class="footer-left">
-            <a href="/social/site" style="cursor:pointer; text-decoration: none;" target="_blank"><i class="fa fa-location-arrow" style="text-indent: -20px; color: #292c2f;" ></i><b style="color: #292c2f;">58 Rue Michel Ange , 44600 Saint-Nazaire</b></a>
+            <a href="/social/site" style="cursor:pointer; text-decoration: none;" target="_blank"><i
+                    class="fa fa-location-arrow" style="text-indent: -20px; color: #292c2f;"></i><b
+                    style="color: #292c2f;">58 Rue Michel Ange , 44600 Saint-Nazaire</b></a>
         </div>
 
     </footer>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/jquery.sticky-sidebar.min.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
