--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -70,6 +70,7 @@
                 <nav class="menu">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="https://bdsiutsn.fr">Accueil</a></li>
+                        <li><a class="nav-link" href="/presentation">Présentation</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true" aria-expanded="false" aria-label="discover">
                                 Evènements
@@ -107,7 +108,6 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
