--- a/evenements/futsal.html
+++ b/evenements/futsal.html
@@ -63,6 +63,7 @@
                 <nav class="menu">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="/">Accueil</a></li>
+                        <li><a class="nav-link" href="/presentation">Présentation</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -108,7 +109,6 @@
                             </div>
 
                         </li>
-                        <li><a class="nav-link" href="/contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
