--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -204,13 +204,13 @@
                                             <a href="https://www.instagram.com/capocampus/" target="_blank">
                                                 <img src="../img/campocampus.png" class="author" width="30"
                                                     height="30" alt="Inc Logo">
-                                                CAP O'CAMPUS
+                                                CAP O' CAMPUS
                                             </a>
                                         </li>
                                         <li class="list-inline-item">9 novembre 2023</li>
                                     </ul>
                                     <h5 class="post-title mb-3 mt-3">
-                                        <a href="https://docs.google.com/forms/d/11-vSeAq2lHZo6cn5C7p1qIAHzmMnW3VE8GUkz_fLaII/viewform?ts=65140b74&edit_requested=true" target="_blank">Sport O' Campus ouvret aux inscriptions !</a>
+                                        <a href="https://docs.google.com/forms/d/11-vSeAq2lHZo6cn5C7p1qIAHzmMnW3VE8GUkz_fLaII/viewform?ts=65140b74&edit_requested=true" target="_blank">Sport O' Campus ouvert aux inscriptions !</a>
                                     </h5>
                                     <p class="excerpt mb-0">
                                         Rendez vous au <a href="https://maps.app.goo.gl/sVY8sfA8qYFokFTQ9?g_st=ic" target="_blank" style="color: #292c2f; text-decoration: underline;">Gymnase Heinlex</a> à partir de 14h30 !
