--- a/admin/index.html
+++ b/admin/index.html
@@ -87,7 +87,7 @@
             <img src="../img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo">
         </header>
 
-        <form action="http://45.145.166.176:3000/login" method="POST" id="loginForm">
+        <form action="https://admin.bdsiutsn.fr/login" method="POST" id="loginForm">
             <label for="password">Mot de passe</label>
             <input type="password" id="password" name="password">
             <button type="submit">Se connecter</button>
