--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -171,7 +171,7 @@
                                     </div>
                                     <ul class="meta list-inline mt-4 mb-0">
                                         <li class="list-inline-item">
-                                            <a href="https://www.instagram.com/bds.iut.sn/" target="_blank">
+                                            <a href="/social/instagram" target="_blank">
                                                 <img src="../img/bds-logo-shark.png" class="author" width="30"
                                                     height="30" alt="Inc Logo">
                                                 BDS IUT SN
@@ -232,7 +232,7 @@
                                     </div>
                                     <ul class="meta list-inline mt-4 mb-0">
                                         <li class="list-inline-item">
-                                            <a href="https://www.instagram.com/bds.iut.sn/" target="_blank">
+                                            <a href="/social/instagram" target="_blank">
                                                 <img src="../img/bds-logo-shark.png" class="author" width="30"
                                                     height="30" alt="Inc Logo">
                                                 BDS IUT SN
@@ -262,7 +262,7 @@
                                     </div>
                                     <ul class="meta list-inline mt-4 mb-0">
                                         <li class="list-inline-item">
-                                            <a href="https://www.instagram.com/bds.iut.sn/" target="_blank">
+                                            <a href="/social/instagram" target="_blank">
                                                 <img src="../img/bds-logo-shark.png" class="author" width="30"
                                                     height="30" alt="Inc Logo">
                                                 BDS IUT SN
@@ -290,7 +290,7 @@
                                     </div>
                                     <ul class="meta list-inline mt-4 mb-0">
                                         <li class="list-inline-item">
-                                            <a href="https://www.instagram.com/bds.iut.sn/" target="_blank">
+                                            <a href="/social/instagram" target="_blank">
                                                 <img src="../img/bds-logo-shark.png" class="author" width="30"
                                                     height="30" alt="Inc Logo">
                                                 BDS IUT SN
@@ -451,7 +451,7 @@
                                     </div>
                                     <ul class="meta list-inline mt-4 mb-0">
                                         <li class="list-inline-item">
-                                            <a href="https://www.instagram.com/bds.iut.sn/" target="_blank">
+                                            <a href="/social/instagram" target="_blank">
                                                 <img src="../img/bds-logo-shark.png" class="author" width="30"
                                                     height="30" alt="Inc Logo">
                                                 BDS IUT SN
