Mise à jour du mode d'utilisation des datas

--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -154,7 +154,7 @@
 
         <script>
             document.addEventListener('DOMContentLoaded', function() {
-                fetch('../datas/equipes.json')
+                fetch('https://admin.bdsiutsn.fr/equipes?json=true')
                     .then(response => response.json())
                     .then(data => {
                         populateTable(data);
