--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -73,7 +73,7 @@
                         <li><a class="nav-link" href="/presentation">Présentation</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true" aria-expanded="false" aria-label="discover">
-                                Evènements
+                                Événements
                             </button>
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
