--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -71,12 +71,12 @@
                         <li><a class="nav-link" href="/presentation">Présentation</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true" aria-expanded="false" aria-label="discover">
-                                Evènements
+                                Événements
                             </button>
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/evenements" style="color: #292c2f;">Tous les evènements à venir</a>
+                                        <a class="dropdown-link" href="/evenements/evenements" style="color: #292c2f;">Tous les événements à venir</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/archive/inscription" style="color: #292c2f;">Inscription Championnat multisports</a>
