--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -78,7 +78,7 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/evenements" style="color: #292c2f;">Tous les evènements à venir</a>
+                                        <a class="dropdown-link" href="/evenements/evenements" style="color: #292c2f;">Tous les événements à venir</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/archive/inscription" style="color: #292c2f;">Inscription Championnat multisports</a>
