--- a/evenements/futsal.html
+++ b/evenements/futsal.html
@@ -67,13 +67,13 @@
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
-                                Evènements
+                                Évènements
                             </button>
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/evenements/evenements"
-                                            style="color: #292c2f;">Tous les evènements à venir</a>
+                                            style="color: #292c2f;">Tous les événements à venir</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/archive/inscription" style="color: #292c2f;">Inscription Championnat multisports</a>
