--- a/presentation.html
+++ b/presentation.html
@@ -72,12 +72,12 @@
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
-                                Evènements
+                                Évènements
                             </button>
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/evenements" style="color: #292c2f;">Tous les evènements à venir</a>
+                                        <a class="dropdown-link" href="/evenements/evenements" style="color: #292c2f;">Tous les événements à venir</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/archive/inscription" style="color: #292c2f;">Inscription Championnat multisports</a>
@@ -136,7 +136,7 @@
                 Saint-Nazaire, en organisant
                 divers événements sportifs comme l'événement la journée d'intégration du début d'année. L'association
                 favorise la cohésion d'équipe et l'esprit de groupe, des valeurs qui s’appliquent aussi bien dans le
-                cadre des la compétitions que dans sa vie professionnelle. Nous avons pour but d’organiser divers
+                cadre des compétitions que dans sa vie professionnelle. Nous avons pour but d’organiser divers
                 événements sportifs et festifs pour les
                 1500 étudiants de l’IUT de Saint-Nazaire ainsi que de dynamiser la vie étudiante de chacun des étudiants
                 de l'IUT.
@@ -163,7 +163,7 @@
             <li style="text-indent: 25px;">
                 Le site va permettre au BDS d’impliquer plus facilement les étudiants à participer aux évènements
                 sportifs en renforçant le côté compétitif de celui-ci. La rubrique <a class="missions-suaps"
-                    href="/classements/equipes" target=”_blank”>Classement</a> sera utiliser pour suivre l’avancer de
+                    href="/classements/equipes" target=”_blank”>Classement</a> sera utilisé pour suivre l’avancée de
                 chaque équipe.
             </li>
         </div>
