--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -62,7 +62,7 @@
                         <li><a class="nav-link" href="/presentation">Présentation</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true" aria-expanded="false" aria-label="discover">
-                                Évenements
+                                Événements
                             </button>
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
@@ -186,7 +186,7 @@
         <br></br>
 
         <div class="titles">
-            <h1 style="color:#292c2f;">Tous les évènements passés ! 🎉</h3>
+            <h1 style="color:#292c2f;">Tous les événements passés ! 🎉</h3>
         </div>
 
         <section class="main-content">
