--- a/evenements/futsal.html
+++ b/evenements/futsal.html
@@ -67,7 +67,7 @@
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
-                                Évènements
+                                Événements
                             </button>
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
