--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -70,7 +70,7 @@
                                         <a class="dropdown-link" href="#" style="color: #292c2f;">Tous les événements à venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/archive/inscription" style="color: #292c2f;">Inscription Championnat multisports</a>
+                                        <a class="dropdown-link" href="/archive/inscription" style="color: #292c2f;">Inscription Championnat</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/evenements/futsal" style="color: #292c2f;">Inscription Tournoi Futsal</a>
