--- a/evenements/futsal.html
+++ b/evenements/futsal.html
@@ -76,7 +76,7 @@
                                             style="color: #292c2f;">Tous les événements à venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/archive/inscription" style="color: #292c2f;">Inscription Championnat multisports</a>
+                                        <a class="dropdown-link" href="/archive/inscription" style="color: #292c2f;">Inscription Championnat</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="#" style="color: #292c2f;">Inscription Tournoi
